OK 1 object pick and place is working letssss go

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     "\n",
     "# C.addFile('./environment.g')\n",
     "# C.addFile(ry.raiPath('environment.g'))\n",
-    "# qHome = C.getJointState()\n",
+    "qHome = C.getJointState()\n",
     "# print(qHome)\n",
     "# C.view()\n",
     "print(ry.raiPath('environment.g'))"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "0"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_21813/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
+      "/tmp/ipykernel_40023/2628657640.py:14: RuntimeWarning: invalid value encountered in arccos\n",
       "  angle = np.arccos(dot_product)  # Angle in radians\n"
      ]
     },
@@ -626,34 +626,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.2.2 Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n",
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
-     ]
     }
    ],
    "source": [
@@ -669,24 +661,46 @@
     "  \n",
     "  \n",
     "  frame = C.addFrame(\"grasp_marker\" + str(i))\n",
-    "  frame.setShape(ry.ST.marker, [.5])\n",
+    "  frame.setShape(ry.ST.marker, [.1])\n",
     "  frame.setPosition(midpoint)\n",
-    "  frame.setColor([1, 0, 0])\n",
+    "  # frame.setColor([1, 0, 0])\n",
+    "  \n",
+    "# We will also need to move the object to some point above the bin to avoid hitting the bin walls\n",
+    "bufferPointPos = C.getFrame(\"bin\").getPosition()\n",
+    "# bufferPointPos[0] = bufferPointPos[0] - 0.5\n",
+    "bufferPointPos[1] = bufferPointPos[1] - 0.35\n",
+    "bufferPointPos[2] = bufferPointPos[2] + 0.5\n",
+    "\n",
+    "buffer_point_frame = C.addFrame(\"buffer_point\")\n",
+    "buffer_point_frame.setShape(ry.ST.marker, [.1])\n",
+    "buffer_point_frame.setPosition(bufferPointPos)\n",
+    "\n",
+    "\n",
+    "# also calc width of each object\n",
+    "width = [None] * len(clusters)\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "    points = np.asarray(cluster.points)\n",
+    "    width[i] = np.linalg.norm(points[best_pairs[i][0]] - points[best_pairs[i][1]])\n",
+    "\n",
+    "  \n",
     "C.view()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1.2.2 Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 239,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "  del bot\n",
@@ -699,16 +713,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ time: 0.031193, evals: 17, done: 1, feasible: 1, sos: 0.482814, f: 0, ineq: 0, eq: 0.0169764 }\n",
+      "{ time: 0.004171, evals: 43, done: 1, feasible: 0, sos: 0.142879, f: 0, ineq: 0, eq: 15.6643 }\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "No feasible path found for object 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[240], line 65\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28mprint\u001b[39m(ret)\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret\u001b[38;5;241m.\u001b[39mfeasible:\n\u001b[0;32m---> 65\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo feasible path found for object \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i))\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# Retrieve the optimized path\u001b[39;00m\n\u001b[1;32m     68\u001b[0m path \u001b[38;5;241m=\u001b[39m komo\u001b[38;5;241m.\u001b[39mgetPath()[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mException\u001b[0m: No feasible path found for object 1"
+     ]
+    }
+   ],
    "source": [
+    "# Initialise BotOp and KOMO \n",
     "try:\n",
     "  del bot\n",
     "  del komo\n",
     "except:\n",
     "  pass\n",
-    "# Initialize BotOp for robot operation\n",
+    "C.setJointState(qHome)\n",
+    "\n",
+    "# Initialize BotOp for robot operation and Komo\n",
     "bot = ry.BotOp(C, useRealRobot=False)\n",
-    "qHome = bot.get_qHome()\n",
+    "qHomeBot = bot.get_qHome()\n",
     "\n",
     "komo = ry.KOMO(\n",
     "  config=C, \n",
@@ -718,28 +755,182 @@
     "  enableCollisions=True\n",
     ")\n",
     "\n",
-    "# Define KOMO for motion optimization\n",
-    "komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
-    "\n",
-    "komo.addObjective([], ry.FS.positionDiff, ['l_gripper', 'target'], ry.OT.eq, [1e1]) #constraint: gripper position\n",
     "\n",
     "\n",
     "\n",
-    "ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
-    "print(ret)\n",
     "\n",
-    "# Retrieve the optimized path\n",
-    "path = komo.getPath()[0]\n",
     "\n",
-    "botOpSpeed = 2\n",
-    "bot.moveTo(path, timeCost=botOpSpeed)\n",
-    "bot.gripperMove(ry._left, width=.01, speed=1)\n",
     "\n",
-    "while bot.getTimeToEnd()>0:\n",
-    "    bot.sync(C, .1)\n",
+    "for i in range(numOfObjects):\n",
+    "  i = 1\n",
     "\n",
+    "  # Define KOMO for picking up object\n",
+    "  komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
+    "  komo.addObjective([], ry.FS.positionDiff, ['l_gripper', 'grasp_marker' + str(i)], ry.OT.eq, [1e1]) #constraint: gripper position\n",
+    "\n",
+    "  # align gripper to grasp points\n",
+    "  komo.addObjective(\n",
+    "      times=[],\n",
+    "      feature=ry.FS.scalarProductXX,\n",
+    "      frames=['l_gripper', 'grasp_marker' + str(i)],\n",
+    "      type=ry.OT.eq,\n",
+    "      scale=[1e1],\n",
+    "      target=[1]\n",
+    "  )\n",
+    "\n",
+    "  komo.addObjective(\n",
+    "      times=[],\n",
+    "      feature=ry.FS.scalarProductYY,\n",
+    "      frames=['l_gripper', 'grasp_marker' + str(i)],\n",
+    "      type=ry.OT.eq,\n",
+    "      scale=[1e1],\n",
+    "      target=[1]\n",
+    "  )\n",
+    "\n",
+    "  komo.addObjective(\n",
+    "      times=[],\n",
+    "      feature=ry.FS.scalarProductZZ,\n",
+    "      frames=['l_gripper', 'grasp_marker' + str(i)],\n",
+    "      type=ry.OT.eq,\n",
+    "      scale=[1e1],\n",
+    "      target=[1]\n",
+    "  )\n",
+    "\n",
+    "  ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
+    "  print(ret)\n",
+    "  if not ret.feasible:\n",
+    "      raise Exception(\"No feasible path found for object \" + str(i))\n",
+    "\n",
+    "  # Retrieve the optimized path\n",
+    "  path = komo.getPath()[0]\n",
+    "\n",
+    "  botOpSpeed = 0.5\n",
+    "  bot.moveTo(path, timeCost=botOpSpeed)\n",
+    "\n",
+    "  while bot.getTimeToEnd()>0:\n",
+    "      bot.sync(C, .1)\n",
+    "\n",
+    "\n",
+    "  \n",
+    "  # grab the object using gripper\n",
+    "  bot.gripperMove(ry._left, width=width[i]-0.065, speed=1)\n",
+    "\n",
+    "\n",
+    "  # Intermediary step: Move the object to the buffer point\n",
+    "\n",
+    "  try:\n",
+    "    del komo\n",
+    "  except:\n",
+    "    pass\n",
+    "  komo = ry.KOMO(C, 1, 1, 0, False)\n",
+    "  komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
+    "  komo.addObjective(\n",
+    "    times=[], \n",
+    "    feature=ry.FS.positionDiff, \n",
+    "    frames=['l_gripper', 'buffer_point'], \n",
+    "    type=ry.OT.eq, scale=[1e1]\n",
+    "  )\n",
+    "\n",
+    "  ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
+    "  intermediary = komo.getPath()[0]\n",
+    "\n",
+    "  botOpSpeed = 0.5\n",
+    "  bot.moveTo(intermediary, timeCost=botOpSpeed)\n",
+    "  while bot.getTimeToEnd()>0:\n",
+    "      bot.sync(C, .1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "  # Now, we will move the object to the bin\n",
+    "  try:\n",
+    "    del komo\n",
+    "  except:\n",
+    "    pass\n",
+    "\n",
+    "  komo = ry.KOMO(C, 1, 1, 0, False)\n",
+    "  komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
+    "\n",
+    "  komo.addObjective(\n",
+    "    times=[],\n",
+    "    feature=ry.FS.positionRel,\n",
+    "    frames=['l_gripper', 'bin-2'],\n",
+    "    type=ry.OT.eq,\n",
+    "    scale=[1e1],\n",
+    "    target=[0, 0, 0.05]\n",
+    "  )\n",
+    "\n",
+    "  ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
+    "  path_to_bin2 = komo.getPath()[0]\n",
+    "\n",
+    "  botOpSpeed = 0.5\n",
+    "  bot.moveTo(path_to_bin2, timeCost=botOpSpeed)\n",
+    "\n",
+    "  while bot.getTimeToEnd()>0:\n",
+    "      bot.sync(C, .1)\n",
+    "    \n",
+    "  bot.gripperMove(ry._left, width=0.075, speed=1)\n",
+    "  while not bot.gripperDone(ry._left):\n",
+    "      bot.sync(C, .1)\n",
+    "      \n",
+    "\n",
+    "  bot.moveTo(qHome, timeCost=botOpSpeed)\n",
+    "  while bot.getTimeToEnd()>0:\n",
+    "      bot.sync(C, .1)\n",
+    "\n",
+    "  # # now we move back to buffer point\n",
+    "  # try:\n",
+    "  #   del komo\n",
+    "  # except:\n",
+    "  #   pass\n",
+    "  # komo = ry.KOMO(C, 1, 1, 0, False)\n",
+    "  # komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
+    "  # komo.addObjective(\n",
+    "  #   times=[], \n",
+    "  #   feature=ry.FS.positionDiff, \n",
+    "  #   frames=['l_gripper', 'buffer_point'], \n",
+    "  #   type=ry.OT.eq, scale=[1e1]\n",
+    "  # )\n",
+    "\n",
+    "  # ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
+    "  # intermediary = komo.getPath()[0]\n",
+    "\n",
+    "  # botOpSpeed = 0.5\n",
+    "  # bot.moveTo(intermediary, timeCost=botOpSpeed)\n",
+    "  # while bot.getTimeToEnd()>0:\n",
+    "  #     bot.sync(C, .1)\n",
+    "  \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "C.view()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now KOMO move to other bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bot.moveTo(qHome, timeCost=botOpSpeed)\n",
+    "# while bot.getTimeToEnd()>0:\n",
+    "#     bot.sync(C, .1)"
    ]
   },
   {
