HW3 FINISHED etssss go

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,8 @@
     "max_trials = 10\n",
     "max_vel = 100\n",
     "max_acc = max_vel\n",
+    "botOpSpeed = 1\n",
+    "\n",
     "\n",
     "C = ry.Config()\n",
     "C.addFile('/home/vboxuser/Desktop/CS449/Migi/hw3/GFiles-HW3/environment.g')\n",
@@ -44,6 +46,29 @@
     "# print(qHome)\n",
     "# C.view()\n",
     "print(ry.raiPath('environment.g'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "  del bot\n",
+    "  del komo\n",
+    "except:\n",
+    "  pass"
    ]
   },
   {
@@ -62,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +415,7 @@
        "0"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +668,7 @@
        "0"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +694,7 @@
     "bufferPointPos = C.getFrame(\"bin\").getPosition()\n",
     "# bufferPointPos[0] = bufferPointPos[0] - 0.5\n",
     "bufferPointPos[1] = bufferPointPos[1] - 0.35\n",
-    "bufferPointPos[2] = bufferPointPos[2] + 0.5\n",
+    "bufferPointPos[2] = bufferPointPos[2] + 0.6\n",
     "\n",
     "buffer_point_frame = C.addFrame(\"buffer_point\")\n",
     "buffer_point_frame.setShape(ry.ST.marker, [.1])\n",
@@ -688,19 +713,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 438,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "  del bot\n",
@@ -711,27 +726,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.031193, evals: 17, done: 1, feasible: 1, sos: 0.482814, f: 0, ineq: 0, eq: 0.0169764 }\n",
-      "{ time: 0.004171, evals: 43, done: 1, feasible: 0, sos: 0.142879, f: 0, ineq: 0, eq: 15.6643 }\n"
+      "{ time: 0.002041, evals: 16, done: 1, feasible: 1, sos: 0.0404048, f: 0, ineq: 0, eq: 0.00372614 }\n",
+      "{ time: 0.000823, evals: 17, done: 1, feasible: 1, sos: 0.025374, f: 0, ineq: 0, eq: 0.000842753 }\n",
+      "{ time: 0.001275, evals: 17, done: 1, feasible: 1, sos: 0.029529, f: 0, ineq: 0, eq: 0.00110861 }\n"
      ]
     },
     {
-     "ename": "Exception",
-     "evalue": "No feasible path found for object 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[240], line 65\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28mprint\u001b[39m(ret)\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret\u001b[38;5;241m.\u001b[39mfeasible:\n\u001b[0;32m---> 65\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo feasible path found for object \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i))\n\u001b[1;32m     67\u001b[0m \u001b[38;5;66;03m# Retrieve the optimized path\u001b[39;00m\n\u001b[1;32m     68\u001b[0m path \u001b[38;5;241m=\u001b[39m komo\u001b[38;5;241m.\u001b[39mgetPath()[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[0;31mException\u001b[0m: No feasible path found for object 1"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 439,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -747,13 +762,13 @@
     "bot = ry.BotOp(C, useRealRobot=False)\n",
     "qHomeBot = bot.get_qHome()\n",
     "\n",
-    "komo = ry.KOMO(\n",
-    "  config=C, \n",
-    "  phases=1, \n",
-    "  slicesPerPhase=20, \n",
-    "  kOrder=0, \n",
-    "  enableCollisions=True\n",
-    ")\n",
+    "# komo = ry.KOMO(\n",
+    "#   config=C, \n",
+    "#   phases=1, \n",
+    "#   slicesPerPhase=20, \n",
+    "#   kOrder=0, \n",
+    "#   enableCollisions=True\n",
+    "# )\n",
     "\n",
     "\n",
     "\n",
@@ -762,11 +777,11 @@
     "\n",
     "\n",
     "for i in range(numOfObjects):\n",
-    "  i = 1\n",
-    "\n",
+    "  komo = ry.KOMO(C, 1, 1, 0, False)\n",
+    "  \n",
     "  # Define KOMO for picking up object\n",
     "  komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
-    "  komo.addObjective([], ry.FS.positionDiff, ['l_gripper', 'grasp_marker' + str(i)], ry.OT.eq, [1e1]) #constraint: gripper position\n",
+    "  komo.addObjective([], ry.FS.positionRel, ['l_gripper', 'grasp_marker' + str(i)], ry.OT.eq, [1e1], [0,0, -0.02]) #constraint: gripper position\n",
     "\n",
     "  # align gripper to grasp points\n",
     "  komo.addObjective(\n",
@@ -804,7 +819,6 @@
     "  # Retrieve the optimized path\n",
     "  path = komo.getPath()[0]\n",
     "\n",
-    "  botOpSpeed = 0.5\n",
     "  bot.moveTo(path, timeCost=botOpSpeed)\n",
     "\n",
     "  while bot.getTimeToEnd()>0:\n",
@@ -813,7 +827,7 @@
     "\n",
     "  \n",
     "  # grab the object using gripper\n",
-    "  bot.gripperMove(ry._left, width=width[i]-0.065, speed=1)\n",
+    "  bot.gripperMove(ry._left, width=width[i]-0.07, speed=1)\n",
     "\n",
     "\n",
     "  # Intermediary step: Move the object to the buffer point\n",
@@ -834,7 +848,6 @@
     "  ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
     "  intermediary = komo.getPath()[0]\n",
     "\n",
-    "  botOpSpeed = 0.5\n",
     "  bot.moveTo(intermediary, timeCost=botOpSpeed)\n",
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
@@ -864,7 +877,6 @@
     "  ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
     "  path_to_bin2 = komo.getPath()[0]\n",
     "\n",
-    "  botOpSpeed = 0.5\n",
     "  bot.moveTo(path_to_bin2, timeCost=botOpSpeed)\n",
     "\n",
     "  while bot.getTimeToEnd()>0:\n",
@@ -875,7 +887,7 @@
     "      bot.sync(C, .1)\n",
     "      \n",
     "\n",
-    "  bot.moveTo(qHome, timeCost=botOpSpeed)\n",
+    "  bot.moveTo(qHome, timeCost=2)\n",
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
     "\n",
@@ -896,7 +908,6 @@
     "  # ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
     "  # intermediary = komo.getPath()[0]\n",
     "\n",
-    "  # botOpSpeed = 0.5\n",
     "  # bot.moveTo(intermediary, timeCost=botOpSpeed)\n",
     "  # while bot.getTimeToEnd()>0:\n",
     "  #     bot.sync(C, .1)\n",
@@ -924,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
