HW3 FINISHED etssss go

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "0"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 484,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "0"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 487,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,16 +726,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.002041, evals: 16, done: 1, feasible: 1, sos: 0.0404048, f: 0, ineq: 0, eq: 0.00372614 }\n",
-      "{ time: 0.000823, evals: 17, done: 1, feasible: 1, sos: 0.025374, f: 0, ineq: 0, eq: 0.000842753 }\n",
-      "{ time: 0.001275, evals: 17, done: 1, feasible: 1, sos: 0.029529, f: 0, ineq: 0, eq: 0.00110861 }\n"
+      "{ time: 0.000888, evals: 18, done: 1, feasible: 1, sos: 0.0406493, f: 0, ineq: 0, eq: 0.00150652 }\n",
+      "{ time: 0.000882, evals: 17, done: 1, feasible: 1, sos: 0.025319, f: 0, ineq: 0, eq: 0.000821975 }\n",
+      "{ time: 0.000887, evals: 17, done: 1, feasible: 1, sos: 0.0296673, f: 0, ineq: 0, eq: 0.00110768 }\n"
      ]
     },
     {
@@ -744,7 +744,7 @@
        "0"
       ]
      },
-     "execution_count": 439,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
     "  # Retrieve the optimized path\n",
     "  path = komo.getPath()[0]\n",
     "\n",
-    "  bot.moveTo(path, timeCost=botOpSpeed)\n",
+    "  bot.moveTo(path, timeCost=2)\n",
     "\n",
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
@@ -887,7 +887,7 @@
     "      bot.sync(C, .1)\n",
     "      \n",
     "\n",
-    "  bot.moveTo(qHome, timeCost=2)\n",
+    "  bot.moveTo(qHome, timeCost=5)\n",
     "  while bot.getTimeToEnd()>0:\n",
     "      bot.sync(C, .1)\n",
     "\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
