--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,16 @@
      "text": [
       "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/environment.g\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 512,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -45,24 +55,24 @@
     "qHome = C.getJointState()\n",
     "# print(qHome)\n",
     "# C.view()\n",
-    "print(ry.raiPath('environment.g'))"
+    "print(ry.raiPath('environment.g'))\n",
+    "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 513,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "bot = ry.BotOp(C, useRealRobot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 514,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "try:\n",
     "  del bot\n",
@@ -87,9 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 515,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 516,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 517,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,15 +227,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 519,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 519,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pclCombined = np.concatenate(pcl, axis=0)\n",
-    "# pclFrame = C.addFrame('pcl', 'world')\n",
-    "# pclFrame.setPointCloud(pclCombined, pclColor)\n",
+    "pclFrame = C.addFrame('pcl', 'world')\n",
+    "pclFrame.setPointCloud(pclCombined, pclColor)\n",
     "\n",
-    "# C.view()"
+    "C.view()"
    ]
   },
   {
@@ -228,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 521,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 522,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [
     {
@@ -406,16 +443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 524,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 484,
+     "execution_count": 524,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 525,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 526,
    "metadata": {},
    "outputs": [
     {
@@ -659,16 +696,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 527,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "37"
       ]
      },
-     "execution_count": 487,
+     "execution_count": 527,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,16 +763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.000888, evals: 18, done: 1, feasible: 1, sos: 0.0406493, f: 0, ineq: 0, eq: 0.00150652 }\n",
-      "{ time: 0.000882, evals: 17, done: 1, feasible: 1, sos: 0.025319, f: 0, ineq: 0, eq: 0.000821975 }\n",
-      "{ time: 0.000887, evals: 17, done: 1, feasible: 1, sos: 0.0296673, f: 0, ineq: 0, eq: 0.00110768 }\n"
+      "{ time: 0.000841, evals: 16, done: 1, feasible: 1, sos: 0.0405021, f: 0, ineq: 0, eq: 0.00369577 }\n",
+      "{ time: 0.001122, evals: 17, done: 1, feasible: 1, sos: 0.0253933, f: 0, ineq: 0, eq: 0.000824735 }\n",
+      "{ time: 0.000963, evals: 18, done: 1, feasible: 1, sos: 0.0296462, f: 0, ineq: 0, eq: 0.00133229 }\n"
      ]
     },
     {
@@ -744,7 +781,7 @@
        "0"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 529,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [],
    "source": [
